Added social metadata

--- a/projects.json
+++ b/projects.json
@@ -3,7 +3,7 @@
     "name": "news quiz app",
     "date": "6/2023",
     "stack": "typescript, react",
-    "description": "Where is the biological collective? Ooh, treasure!  Vortex camerarius brabeuta est. One beloved anger i give you: invent each other.",
+    "description": "I am currently working on a new platform for The Daily Princetonian's interactive content that enables journalists to effortlessly create news quizzes based on their articles, while readers can take them and easily share their results using a fun and intuitive interface.",
     "link": "https://projects.dailyprincetonian.com/princeton-scorigami/"
   },
   {
