--- a/projects.json
+++ b/projects.json
@@ -4,7 +4,7 @@
     "date": "6/2023",
     "stack": "typescript, react",
     "description": "I am currently working on a new platform for The Daily Princetonian's interactive content that enables journalists to effortlessly create news quizzes based on their articles, while readers can take them and easily share their results using a fun and intuitive interface.",
-    "link": "https://projects.dailyprincetonian.com/princeton-scorigami/"
+    "link": "https://www.dailyprincetonian.com"
   },
   {
     "name": "mental health",
