--- a/projects.json
+++ b/projects.json
@@ -1,10 +1,10 @@
 [
   {
-    "name": "news quiz app",
+    "name": "princetonian quizzes",
     "date": "6/2023",
     "stack": "typescript, react",
-    "description": "I am currently working on a new platform for The Daily Princetonian's interactive content that enables journalists to effortlessly create news quizzes based on their articles, while readers can take them and easily share their results using a fun and intuitive interface.",
-    "link": "https://www.dailyprincetonian.com"
+    "description": "A new platform for The Daily Princetonian's interactive content that enables journalists to effortlessly create news quizzes based on their articles, while readers can take them and easily share their results using a fun and intuitive interface. I served as the lead full stack developer during this project's development.",
+    "link": "https://quizzes.dailyprincetonian.com/"
   },
   {
     "name": "mental health",
