--- a/projects.json
+++ b/projects.json
@@ -3,7 +3,7 @@
     "name": "princetonian quizzes",
     "date": "6/2023",
     "stack": "typescript, react",
-    "description": "A new platform for The Daily Princetonian's interactive content that enables journalists to effortlessly create news quizzes based on their articles, while readers can take them and easily share their results using a fun and intuitive interface. I served as the lead full stack developer during this project's development.",
+    "description": "A new platform for The Daily Princetonian's interactive content that enables journalists to effortlessly create news quizzes based on their articles, while readers can take them and easily share their results using a fun and intuitive interface. I served as the lead full stack developer during this project's development, responsible for the frontend application and the GUIs that interface with the backend quiz database.",
     "link": "https://quizzes.dailyprincetonian.com/"
   },
   {
